# vgi-netflow

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/netflow-core/: Cargo.toml
crates/netflow-core/examples/: gen_fixtures.rs
crates/netflow-core/src/: buf.rs  cache.rs  fixtures.rs  inet.rs  lib.rs  normalize.rs  wellformed.rs
crates/netflow-core/src/decode/: header.rs  ipfix.rs  mod.rs  record.rs  sflow.rs  v5.rs  v9.rs
crates/netflow-core/src/registry/: enterprise.rs  iana_ie.rs  mod.rs
crates/netflow-core/tests/: decode.rs
crates/netflow-wasm/: Cargo.toml
crates/netflow-wasm/src/: lib.rs
crates/netflow-worker/: Cargo.toml
crates/netflow-worker/src/: arrow_map.rs  lib.rs  main.rs  meta.rs  state.rs
crates/netflow-worker/src/scalar/: flow_version.rs  header.rs  mod.rs  version.rs  well_formed.rs
crates/netflow-worker/src/table/: mod.rs  templates.rs
crates/netflow-worker/src/table_in_out/: flows.rs  mod.rs
test/sql/: flows.test  scalars.test  templates.test
wasm/: build.sh
