[workspace]
resolver = "2"
members = ["crates/netflow-core", "crates/netflow-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-netflow"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Keep arrow / vgi-rpc in
# lockstep with vgi's pins so a single arrow / vgi-rpc resolves across the tree.
vgi = "0.14.0"
vgi-rpc = { version = "0.8.0", default-features = false, features = ["macros", "http"] }
arrow = { version = "59", default-features = false, features = ["ipc"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

netflow-core = { path = "crates/netflow-core" }

[profile.release]
opt-level = 2
strip = true
