[package]
name = "netflow-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker decoding NetFlow v5/v9, IPFIX, and sFlow v5 flow-export datagrams (BLOB) into normalized flow rows for DuckDB over Apache Arrow"

[[bin]]
name = "netflow-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
netflow-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log = "0.4"
env_logger = "0.11"
